--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,11 @@ MarkupSafe==0.23
 numpy==1.11.2
 openpyxl==2.4.0
 pandas==0.19.0
+PyMySQL==0.7.9
 python-dateutil==2.5.3
 pytz==2016.7
+PyYAML==3.12
 six==1.10.0
 SQLAlchemy==1.1.2
+uWSGI==2.0.14
 Werkzeug==0.11.11
